--- a/src/aiai_app_frontend/index.html
+++ b/src/aiai_app_frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>AIAI</title>
+    <title>AIAI | Where AI and Blockchain Meets</title>
     <base href="/" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/images/favicon.png" />
   </head>
 
   <body>
